DV-000199: Add unit tests.